ISIS-1841 refining _Set and _List, and introducing _Reduction
also replacing lots of guava predicates